<resources>
    <string name="app_name">My Profile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Submit</string>
    <string name="FullName">Full Name: </string>
    <string name="Qualification">Qualification: </string>
    <string name="Profession">Profession: </string>
    <string name="Hobby">Hobby: </string>
    <string name="DreamJob">Dream Job: </string>
    <string name="title_activity_user_input_display">UserInputDisplay</string>
</resources>